# is469

./: .env.example  .gitignore  AGENTS.md  README.md  README_S3.md  REPORT_S0_S1.md  error_detection_section.html  index.html  pyproject.toml  results
.cache/: rag_query_embedding_cache.json
configs/: agentic_rag.yaml  base.yaml  finetune_error_id.yaml  finetune_translation.yaml  finetune_translation_h100.yaml  finetune_translation_runA_0p5b.yaml  finetune_translation_runA_short_0p5b.yaml  finetune_translation_runB_0p5b.yaml  finetune_translation_runD_0p5b.yaml  rag.yaml  s0_dev_eval_0p5b.yaml  s1_dev_eval_runA.yaml  s1_dev_eval_runA_ckpt300.yaml  s1_dev_eval_runA_ckpt400.yaml  s1_dev_eval_runA_short.yaml  s1_dev_eval_runB.yaml  s1_dev_eval_runD.yaml  s1_inference.yaml  s1_inference_v3.yaml  s1_inference_v3_smoke.yaml  s3_inference.yaml  s3_inference_agentic.yaml
frontend/: index.html  vercel.json
genai_llms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kb/: annotations_raw.jsonl  candidates_for_annotation.jsonl  gemini_annotated_chunks.jsonl  gemini_annotated_results.jsonl  glossary.csv  glossary_chunks.jsonl  glossary_chunks_embedded_full.index  glossary_chunks_embedded_full.jsonl  glossary_chunks_embedded_full_metadata.jsonl  glossary_chunks_embedded_full_vectors.jsonl  grammar_chunks_embedded.jsonl  grammar_chunks_embedded_full.jsonl  grammar_notes.md  knowledge_base_indexes.json  style_guide.md  style_guide_chunks.jsonl  style_guide_chunks_embedded_full.index  style_guide_chunks_embedded_full.jsonl  translation_memory.jsonl  (+5 more)
rag/: faiss.py  (+10 more)
(+77 files in other folders)
