[project]
name = "genai-llms"
version = "0.1.0"
description = "EN->JA translation with baseline, fine-tuning, RAG, and agentic RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "modal>=1.1.0",
  "huggingface-hub>=0.32.0",
  "boto3>=1.37.0",
  "pyyaml>=6.0.2",
  "torch>=2.5.1",
  "transformers>=4.46.0",
  "sentence-transformers>=3.0.0",
  "peft>=0.14.0",
  "datasets>=3.2.0",
  "accelerate>=1.2.0",
  "trl>=0.13.0",
  "bitsandbytes>=0.45.0",
  "sentencepiece>=0.2.0",
  "protobuf>=5.29.0",
  "sacrebleu>=2.5.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["modal_jobs*", "src*", "scripts*"]
